--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "backend-game-dev",
   "version": "1.0.0",
-  "description": "Backend para juegos de velocidad de código",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "Backend for code typing speed game",
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "express-rate-limit": "^7.2.0",
-    "mongoose": "^8.2.0"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.16.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.0.3"
   }
-} 
+}
